syntax = "proto3";

package user;

import "google/api/annotations.proto";

option go_package = "github.com/vincen320/user-service-grpc/proto";

service User{
    rpc CreateUser(UserCreateRequest) returns (UserCreateResponse){
        option (google.api.http) = {
            post: "/v1/user"
            body: "*" //maksudnya request body
        };
    }
    rpc GetUser(GetUserRequest)returns(GetUserResponse){
        option (google.api.http) = {
            get: "/v1/user/{search}" //{search} sesuaikan dengan field di message yang berhubungan dan yang akan diisi (?)
        };
    }
}

message UserCreateRequest{
    string name=1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message UserCreateResponse{
    string id=1;
    string username =2;
    string email =3;
    int64 createdAt =4;
    string name=5;
    string message=6;
}

message GetUserRequest{
    string search=1;
}

message GetUserResponse{
    string id=1;
    string username =2;
    string email =3;
    int64 createdAt =4;
    string name=5;
    string message=6;
}